--- a/SMS/SMSapp/templates/classman.html
+++ b/SMS/SMSapp/templates/classman.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Class Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- for the sidebar toggle -->
     <script src="{% static 'script.js' %}"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
