--- a/SMS/SMSapp/templates/login.html
+++ b/SMS/SMSapp/templates/login.html
@@ -12,7 +12,7 @@
 </head>
 <body class="bg-light">
     <div class="container d-flex align-items-center justify-content-center" style="min-height: 100vh;">
-        <div class="card shadow p-4" style="width: 100%; max-width: 400px; border-radius: 1rem;">
+        <div style="width: 100%; max-width: 400px;">
             <img src="{% static 'icons/logo.png' %}" alt="LSPU Logo" class="img-fluid mx-auto d-block mb-3" style="max-width: 100px;">
             <h2 class="text-center mb-4">LSPU SMS Login</h2>
             <form method="POST" novalidate>
@@ -38,7 +38,7 @@
         * {
             font-family: "Ubuntu", sans-serif;
         }
-        
+
         .btn-primary {
             background-color: #64b458 !important;
             border-color: #64b458 !important;
@@ -50,7 +50,6 @@
             border-color: #5d9861 !important;
         }
     </style>
-    <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
